Update scheme text color in Omnibox only in non-default Security Levels

A recent refactoring dropped a test from the conditional which caused
the Omnibox to paint the scheme text in black in cases where it should
not. Restore the conditional so that the Omnibox only colors the scheme
text in the correct scenarios.

BUG=699222
TEST=Type about:blank in the omnibox and hit enter. "about:" should be
grey and "blank" should be black

Review-Url: https://codereview.chromium.org/2734783007
Cr-Commit-Position: refs/heads/master@{#455783}

Former-commit-id: f079e7398cefd26400234c38a83630d2f5730969